--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
 							<h2 class="contact">Contactez-moi </h2>
 							<ul class="actions stacked">
 								<li>
-									<a href="mailto:f.pizzetta@orange.fr?subject=ContactSiteWeb" class="button fit primary">&#9993;</a>
+									<a href="mailto:pizzettafranck@gmail.com?subject=Devis" class="button fit primary">&#9993;</a>
 								</li>
 							</ul>
 						</div>
