--- a/generic.html
+++ b/generic.html
@@ -60,6 +60,9 @@
 							<img src="./images/pic22.jpg" alt="Artisan">
 							<img src="./images/pic23.jpg" alt="Renovation">
 							<img src="./images/pic24.jpg" alt="Peinture">
+							<img src="./images/pic25.jpg" alt="Peinture">
+							<img src="./images/pic26.jpg" alt="Peinture">
+							<img src="./images/pic27.jpg" alt="Peinture">
 						</div>
 					</article>
 			</div>
@@ -69,7 +72,7 @@
 				<div class="inner">
 					<h2 class="contact">Contactez-moi</h2>
 					<ul class="actions stacked">
-						<a href="mailto:f.pizzetta@orange.fr?subject=ContactSiteWeb" class="button fit primary">&#9993;</a>
+						<a href="mailto:pizzettafranck@gmail.com?subject=Devis" class="button fit primary">&#9993;</a>
 					</ul>
 				</div>
 			</section>
